[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemies/boss3-wings.png" type="Texture" id=1]
[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Boss3.gd" type="Script" id=3]
[ext_resource path="res://enemies/boss3-body.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=2]
resource_name = "drop_bombs"
length = 0.3
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "drop_bomb"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ), Vector2( 0, 0 ), Vector2( 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -25.0, 25.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_minions"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 4 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.0
height = 16.0

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.929412, 0.2, 0.2, 1 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.2, 0.2, 1 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.2, 0.2, 1 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.2, 0.2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BOSS3" instance=ExtResource( 2 )]
script = ExtResource( 3 )
MAX_SPEED = 100
ACCELLERATION = 1000

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 4 )
hframes = 2

[node name="Sprite" type="Sprite" parent="Sprite" index="0"]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "fly"
anims/drop_bombs = SubResource( 2 )
anims/fly = SubResource( 3 )
anims/spawn = SubResource( 4 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 6 )

[node name="EnemyStats" parent="." index="5"]
max_health = 2
health = 2

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 2.0
autostart = true

[node name="HitPlayer" type="AnimationPlayer" parent="." index="7"]
playback_speed = 1.6
anims/oof = SubResource( 7 )

[node name="SpawnTimer" type="Timer" parent="." index="8"]
wait_time = 6.0
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
